--- a/conf/Dockerfile
+++ b/conf/Dockerfile
@@ -6,4 +6,4 @@ COPY package*.json ./
 RUN npm install -g @angular/cli
 RUN npm install
 
-CMD ["ng", "serve", "--host", "0.0.0.0"]
+CMD ["ng", "serve", "--host", "0.0.0.0", "--poll", "2000"]
